--- a/videoplayer/build.gradle
+++ b/videoplayer/build.gradle
@@ -39,6 +39,10 @@ android {
                 "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
         ]
     }
+
+    packagingOptions {
+        exclude "META-INF/*"
+    }
 }
 
 dependencies {
@@ -51,10 +55,17 @@ dependencies {
     implementation Dependencies.coroutinesCore
     implementation Dependencies.lifecycleRuntimeKtx
 
+    implementation Dependencies.okHttp3
+    implementation Dependencies.arrowCore
+
     implementation Dependencies.exoplayerUi
     implementation Dependencies.exoplayerHLS
     implementation Dependencies.exoplayerCore
     implementation Dependencies.exoplayerDash
+
+    implementation "be.tapped.vlaamsetv:vier"
+    implementation "be.tapped.vlaamsetv:vrtnu"
+    implementation "be.tapped.vlaamsetv:vtmgo"
 
     androidTestImplementation Testing.junit
     androidTestImplementation Testing.espresso
