--- a/videoplayer-sample/build.gradle
+++ b/videoplayer-sample/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 apply from: "${rootDir}/common.gradle"
 
@@ -14,6 +15,7 @@ dependencies {
     implementation Dependencies.kotlinStdLib
     implementation Dependencies.coreKtx
     implementation Dependencies.appCompat
+    implementation Dependencies.fragmentKtx
     implementation Dependencies.material
     implementation Dependencies.constraintLayout
 
