--- a/videoplayer-sample/src/main/AndroidManifest.xml
+++ b/videoplayer-sample/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:theme="@style/Theme.VlaamseTV">
         <activity
             android:name=".MainActivity"
+            android:supportsPictureInPicture="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-            android:launchMode="singleTop">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
