--- a/vlaamsetv/build.gradle
+++ b/vlaamsetv/build.gradle
@@ -7,11 +7,6 @@ apply from: "${rootDir}/common.gradle"
 android {
     defaultConfig {
         applicationId Versions.packageName
-        testInstrumentationRunnerArguments clearPackageData: 'true'
-    }
-
-    testOptions {
-        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
 }
 
@@ -21,7 +16,8 @@ dependencies {
     implementation Dependencies.appCompat
     implementation Dependencies.material
     implementation Dependencies.constraintLayout
-    debugImplementation Testing.fragmentTest
+    implementation Dependencies.navigationFragment
+    implementation Dependencies.navigationUiKtx
 
     implementation Dependencies.leanbackApp
     implementation Dependencies.leanbackPrefs
@@ -30,9 +26,14 @@ dependencies {
     implementation "be.tapped.vlaamsetv:vrtnu"
     implementation "be.tapped.vlaamsetv:vtmgo"
 
-    androidTestImplementation Testing.espresso
-    androidTestImplementation Testing.testRunner
-    androidTestImplementation Testing.testRules
     androidTestImplementation Testing.junit
     androidTestUtil Testing.testOrchestrator
+
+    androidTestImplementation Dependencies.uiTestJunit
+    androidTestImplementation Dependencies.espressoCore
+    androidTestImplementation Dependencies.uiTestRules
+    androidTestImplementation Dependencies.espressoContribution
+
+    debugImplementation Testing.fragmentTest
+    androidTestImplementation Testing.kakao
 }
