--- a/vlaamsetv/src/main/AndroidManifest.xml
+++ b/vlaamsetv/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="android.hardware.touchscreen"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:banner="@drawable/tv_banner"
