--- a/vlaamsetv/src/main/AndroidManifest.xml
+++ b/vlaamsetv/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:banner="@drawable/tv_banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VlaamseTV">
