Use Wire for generating protobuffers since it is more stable Simplify the username and password entry

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath Plugins.kotlinGradle
         classpath Plugins.androidGradle
+        classpath Plugins.wire
     }
 }
 
