--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath Plugins.kotlinGradle
         classpath Plugins.androidGradle
         classpath Plugins.wire
+        classpath Plugins.navigationSafeArgs
     }
 }
 
