--- a/vlaamsetv/build.gradle
+++ b/vlaamsetv/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.squareup.wire'
+    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 apply from: "${rootDir}/common.gradle"
 
