--- a/common.gradle
+++ b/common.gradle
@@ -15,6 +15,8 @@ android {
         testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
+    // Run one test
+    // ./gradlew connectedCheck -Pandroid.testInstrumentationRunnerArguments.class=be.tapped.vlaamsetv.prefs.EncryptedDataStoreTest
     testOptions {
         execution 'ANDROIDX_TEST_ORCHESTRATOR'
         animationsDisabled true
