Expose credentials from store

--- a/vlaamsetv/build.gradle
+++ b/vlaamsetv/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation Dependencies.okHttp3
     implementation Dependencies.coroutinesCore
     implementation Dependencies.arrowCore
+    implementation Dependencies.arrowFxCoroutines
     implementation Dependencies.androidXDataStore
     implementation Dependencies.wireRuntime
 
