--- a/vlaamsetv/src/main/AndroidManifest.xml
+++ b/vlaamsetv/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
 
         <activity
             android:name=".playback.PlaybackActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+            android:launchMode="singleTask"
+            android:supportsPictureInPicture="true"
             android:theme="@style/Theme.TV.VlaamseTV" />
 
         <activity
