Set some meta data and play with seek provider api

--- a/videoplayer/build.gradle
+++ b/videoplayer/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation Dependencies.exoplayerExtLeanback
     implementation Dependencies.exoplayerExtMedia2
     implementation Dependencies.exoplayerExtMediaSession
+    implementation Dependencies.coil
 
     implementation Dependencies.coroutinesCore
     implementation Dependencies.lifecycleRuntimeKtx
