--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ include ':videoplayer-sample'
 
 includeBuild('../vrtnu-vtmgo-vier-service') {
     dependencySubstitution {
-        substitute module('be.tapped.vlaamsetv:vier') with project(':vier')
+        substitute module('be.tapped.vlaamsetv:goplay') with project(':goplay')
         substitute module('be.tapped.vlaamsetv:vrtnu') with project(':vrtnu')
         substitute module('be.tapped.vlaamsetv:vtmgo') with project(':vtmgo')
     }
